Wymiana waluty zostaje dodana do Tabeli przelewy + poprawy wizualne

--- a/Views/Home/Form.cshtml
+++ b/Views/Home/Form.cshtml
@@ -43,7 +43,7 @@
 <fieldset class="lewy">
 
     <form class="form-horizontal" method="post" action="@Url.Action("AddTransaction","Home")">
-<legend>Dodaj transakcje</legend>
+    <legend>@ViewBag.AmountPLN</legend>
 
 <!-- Nazwa-->
 <div class="form-group">
