--- a/Views/Home/ExChange.cshtml
+++ b/Views/Home/ExChange.cshtml
@@ -6,22 +6,16 @@
     //Konwersja tego co przychodzi do normalnej liczby decimal
     string eurtoplnstring = (string)ViewData["kursEURtoPLN"];
     string plntoeurstring = (string)ViewData["kursPLNtoEUR"];
-    //Eur to pln
-    string eurtoplnliczba = eurtoplnstring.Substring(15, 12);
-    eurtoplnliczba = eurtoplnliczba.Remove(1, 1).Insert(1, ",").Remove(4, 8);
-    decimal eurtopln = Convert.ToDecimal(eurtoplnliczba);
-    //Pln to eur
-    string plntoeurliczba = plntoeurstring.Substring(15, 12);
-    plntoeurliczba = plntoeurliczba.Remove(1, 1).Insert(1, ",").Remove(4, 8);
-    decimal plntoeur = Convert.ToDecimal(plntoeurliczba);
+    decimal eurtopln = Convert.ToDecimal(eurtoplnstring);
+    decimal plntoeur = Convert.ToDecimal(plntoeurstring);
 }
 <script>
     const EurToPln = @Json.Serialize(eurtopln);
     const PlnToEur = @Json.Serialize(plntoeur);
 </script>
+
 <div class="testexchange">
-       <form class="form-horizontal">
-    <fieldset>
+      
 
     <!-- Form Name -->
     <legend class="WymianaEP">Wymiana PLN i EUR</legend>
@@ -36,36 +30,44 @@
         </select>
       </div>
     </div>
+
+
+  <!-- Formularz dla EURO -> PLN -->
+   <form class="form-horizontal" method="post" action="@Url.Action("DodajWymianeEur","Home")">
+    <fieldset>
 <div id="EURPLN">
     <!-- Text input-->
     <div class="form-group">
-      <label class="col-md-4 control-label" for="AmountEur">Ilość EUR</label>  
-      <div class="col-md-4">
-      <input id="AmountEur" name="AmountEur" type="text" placeholder="€€€" class="form-control input-md" required="">
-
-      </div>
+              <div class="col-md-4">
+                  <label class="col-md-4 control-label" for="AmountEur">Ilość EUR</label>  
+                    <input id="AmountEur" name="AmountEur" type="text" placeholder="€€€" class="form-control input-md" required="">
+             </div>
+              <div class="Przelicznik">
+                  Kurs: @eurtopln <br/>
+                  <span id="eurilosc"></span>€ da Ci <span id="eurspan"></span> Zł <br/>
+              </div>
+       
     </div>
 
     <!-- Button -->
     <div class="form-group">
       <div class="col-md-4">
-          <div class="Przelicznik">
-              Kurs: @eurtopln <br/>
-              <span id="eurilosc"></span>€ da Ci <span id="eurspan"></span> Zł. <br/>
-              
-          </div>
-
- 
-         <input class="guzik" type="submit" value="Wyślij">
+         
+         <input class="guzik1" type="submit" value="Wymień">
       </div>
     </div>
 </div>
+ </fieldset>
+ </form>
+ <form class="form-horizontal" method="post" action="@Url.Action("DodajWymianePln","Home")">
+    <fieldset>
+    <!-- Formularz dla PLN -> EURO -->
        <div id="PLNEUR">
         <!-- Text input-->
         <div class="form-group">
           <label class="col-md-4 control-label" for="AmountPLN">Ilość PLN</label>  
           <div class="col-md-4">
-          <input id="AmountPLN" name="AmountPLN" type="text" placeholder="Zł" class="form-control input-md" required="">
+          <input id="AmountPLN" name="AmountPLN" type="text" class="form-control input-md" required="">
 
           </div>
         </div>
@@ -77,7 +79,7 @@
                   Kurs: @plntoeur <br/>
                   <span id="plnilosc"></span> Zł da Ci <span id="plnspan"></span>€  <br/>
               </div>
-              <input class="guzik" type="submit" value="Wyślij">
+              <input class="guzik2" type="submit" value="Wymień">
       </div>
     </div>
 
@@ -110,19 +112,19 @@
 </script>
 <script>
     const LiczbaInput = document.getElementById('AmountEur');
-    const wynikspan = document.getElementById('eurspan');
+    const wynikspaneur = document.getElementById('eurspan');
     const wynikeurilosc = document.getElementById('eurilosc');
 
     function obliczWynik() {
-        const wpisaneeur = parseFloat(LiczbaInput.value);
+        const wpisaneeur = parseFloat(LiczbaInput.value.replace(',','.'));
 
         if(isNaN(wpisaneeur) || wpisaneeur === 0) {
-            wynikspan.textContent = '0';
+           wynikspaneur.textContent = '0';
             wynikeurilosc.textContent = '0';
         } else {
              const result = (wpisaneeur * EurToPln).toFixed(2);
            wynikeurilosc.textContent = wpisaneeur;
-        wynikspan.textContent = result;
+        wynikspaneur.textContent = result;
         }
     }   
     LiczbaInput.addEventListener('input',obliczWynik);
@@ -137,7 +139,7 @@
     const wynikPLNilosc = document.getElementById('plnilosc');
 
     function obliczWynikPLN() {
-        const wpisanepln = parseFloat(LiczbaPLN.value);
+        const wpisanepln = parseFloat(LiczbaPLN.value.replace(',','.'));
 
         if(isNaN(wpisanepln) || wpisanepln === 0) {
             wynikspanPLN.textContent = '0';
@@ -145,7 +147,7 @@
         } else {
              const result2 = (wpisanepln * PlnToEur).toFixed(2);
            wynikPLNilosc.textContent = wpisanepln;
-        wynikspanPLN.textContent = result2;
+            wynikspanPLN.textContent = result2;
         }
     }   
     LiczbaPLN.addEventListener('input',obliczWynikPLN);
