--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -67,7 +67,7 @@ body {
 
 .containerindex {
     height: 100%;
-    max-height: 620px;
+    max-height: 520px;
     overflow-y: auto;
 }
 
@@ -182,9 +182,13 @@ input[type="submit"]:hover {
 .Przelicznik {
    text-align: center;
 }
-.guzik {
+.guzik1 {
     align-content: center;
-    margin-top: 4px;
+    margin-top: 50px;
+}
+.guzik2 {
+    align-content: center;
+    margin-top: 2px;
 }
 
 .col-md-4 {
@@ -193,4 +197,14 @@ input[type="submit"]:hover {
 .WymianaEP {
     text-align: center;
     font-size: 28px
+}
+.Wymiana {
+    display: flex;
+}
+.col-md-4 {
+    width: 50%;
+    padding: 5px;
+}
+.form-group {
+    height: 75px;
 }
