Optymalizacja kodu + dodanie nowego controllera + poprawki wizualne

--- a/Views/Home/ExChange.cshtml
+++ b/Views/Home/ExChange.cshtml
@@ -33,7 +33,7 @@
 
 
   <!-- Formularz dla EURO -> PLN -->
-   <form class="form-horizontal" method="post" action="@Url.Action("DodajWymianeEur","Home")">
+   <form class="form-horizontal" method="post" action="@Url.Action("DodajWymianeEur","Function")">
     <fieldset>
 <div id="EURPLN">
     <!-- Text input-->
@@ -59,7 +59,7 @@
 </div>
  </fieldset>
  </form>
- <form class="form-horizontal" method="post" action="@Url.Action("DodajWymianePln","Home")">
+ <form class="form-horizontal" method="post" action="@Url.Action("DodajWymianePln","Function")">
     <fieldset>
     <!-- Formularz dla PLN -> EURO -->
        <div id="PLNEUR">
