Dodanie sprawdzania wpisywanych wartości w formualrzach register, login oraz wypisywanie błędów aby uzytkownik wiedział co zrobił źle.

--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -1,5 +1,8 @@
-﻿@{
+﻿@using System.Data
+@model FormData
+@{
     ViewData["Title"] = "Logowanie";
+    string error = ViewData["Error"] as string;
 }
 <div class="test">
     <form class="form-horizontal" method="post" action="@Url.Action("CheckUser","Function")">
@@ -7,12 +10,17 @@
 
             <!-- Form Name -->
             <legend>Logowanie</legend>
+            
+               <div class="errorlogin">@error</div>
+            
+            
+            
 
             <!-- Text input-->
             <div class="form-group">
                 <label class="col-md-4 control-label" for="Email">Email</label>
                 <div class="col-md-4">
-                    <input id="Email" name="Email" type="text" placeholder="email" class="form-control input-md">
+                    <input id="Email" name="Email" type="text" placeholder="email" class="form-control input-md" required>
                 </div>
             </div>
 
@@ -20,7 +28,7 @@
             <div class="form-group">
                 <label class="col-md-4 control-label" for="Password">Hasło</label>
                 <div class="col-md-4">
-                    <input id="Password" name="Password" type="password" class="form-control input-md">
+                    <input id="Password" name="Password" type="password" class="form-control input-md" required>
                 </div>
             </div>
 
@@ -28,7 +36,7 @@
             <div class="form-group">
                 <div class="col-md-4">
                     <button id="LoginButton" name="LoginButton" class="btn btn-primary">Zaloguj</button>
-                    <br /><span>Nie masz konta? <a class="logreg" asp-area="" asp-controller="Home" asp-action="Register">Zarejestruj się!</a></span>
+                    <br /><span>Nie masz konta? <a class="logreg"  asp-controller="Home" asp-action="Register">Zarejestruj się!</a></span>
                 </div>
             </div>
 
