--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Rejestracja";
+    string error = ViewData["ErrorReg"] as string;
 }
 <div class="test">
     <form class="form-horizontal" method="post" action="@Url.Action("AddUser","Function")">
@@ -7,12 +8,13 @@
 
         <!-- Form Name -->
         <legend>Rejestracja</legend>
+        <div class="errorlogin">@error</div>
 
         <!-- Text input-->
         <div class="form-group">
                 <label class="col-md-4 control-label" for="Email">Email</label>
             <div class="col-md-4">
-                    <input id="Email" name="Email" type="text" placeholder="email" class="form-control input-md">
+                    <input id="Email" name="Email" type="text" placeholder="email" class="form-control input-md" required>
             </div>
         </div>
 
@@ -20,7 +22,7 @@
         <div class="form-group">
                 <label class="col-md-4 control-label" for="password">Hasło</label>
             <div class="col-md-4">
-                    <input id="password" name="password" type="password" class="form-control input-md">
+                    <input id="password" name="password" type="password" class="form-control input-md" required>
             </div>
         </div>
 
@@ -28,7 +30,7 @@
         <div class="form-group">
             <div class="col-md-4">
                 <button id="LoginButton" name="LoginButton" class="btn btn-primary">Zarejestruj</button>
-                <br /><span>Masz już konto? <a class="logreg" asp-area="" asp-controller="Home" asp-action="Login">Zaloguj się!</a></span>
+                <br /><span>Masz już konto? <a class="logreg"  asp-controller="Home" asp-action="Login">Zaloguj się!</a></span>
             </div>
         </div>
 
